--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
       <h2 id="skills-heading">My Skills.</h2>
       <div class="skill-row-1">
         <img class="web-development-1" src="Images/download 3.png" alt="web-development picture">
-        <img class="web-development-2" src="Images/mongo 3.jpg" alt="Mongo DB">
-        <img class="web-development-3" src="Images/node 2.png" alt="Node.js">
         <h3 id="web-heading">Web Development</h3>
         <p>I'm a web developer, so I know how to create your website to run across multiple devices using the latest technologies available.</p>
       </div>
       <div class="skill-row-2">
         <img class="android-development" src="Images/Android studio 2.png" alt="Android Studio">
-        <h3>Android/Mobile application Development</h3>
+        <h3>Android application Development</h3>
         <p id="last-paragraph">As a mobile app developer for android, i can create responsive and marketable apps for your business needs.</p>
       </div>
     </div>
